--- a/template/index.html
+++ b/template/index.html
@@ -69,6 +69,8 @@
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
+                            <div class="views">1.5M views</div>
+                            <div class="days">1 day ago</div>
                         </div>
                     </div>
                     <div class="video">
@@ -79,6 +81,8 @@
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
+                            <div class="views">1.5M views</div>
+                            <div class="days">1 day ago</div>
                         </div>
                     </div>
                     <div class="video">
@@ -89,6 +93,8 @@
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
+                            <div class="views">1.5M views</div>
+                            <div class="days">1 day ago</div>
                         </div>
                     </div>
                     <div class="video">
@@ -99,6 +105,8 @@
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
+                            <div class="views">1.5M views</div>
+                            <div class="days">1 day ago</div>
                         </div>
                     </div>
                     <div class="video">
@@ -109,6 +117,8 @@
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
+                            <div class="views">1.5M views</div>
+                            <div class="days">1 day ago</div>
                         </div>
                     </div>
                     <div class="video">
@@ -119,6 +129,8 @@
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
+                            <div class="views">1.5M views</div>
+                            <div class="days">1 day ago</div>
                         </div>
                     </div>
                     <div class="video">
@@ -129,6 +141,8 @@
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
+                            <div class="views">1.5M views</div>
+                            <div class="days">1 day ago</div>
                         </div>
                     </div>
                     <div class="video">
@@ -139,6 +153,8 @@
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
+                            <div class="views">1.5M views</div>
+                            <div class="days">1 day ago</div>
                         </div>
                     </div>
                 </div>
