Third commit on Day 4 Assignment 2 'Topic of videos changed'

--- a/template/index.html
+++ b/template/index.html
@@ -62,10 +62,10 @@
             <div class="videos-container">
                 <div class="videos">
                     <div class="video">
-                        <div class="contain-img"><img src="../img/loneliness.png" alt="" class="img-custom"></div>
+                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
                         <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
-                            <div class="detail">loneliness</div>
+                            <div class="detail">The Blackhole</div>
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
@@ -74,10 +74,10 @@
                         </div>
                     </div>
                     <div class="video">
-                        <div class="contain-img"><img src="../img/loneliness.png" alt="" class="img-custom"></div>
+                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
                         <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
-                            <div class="detail">loneliness</div>
+                            <div class="detail">The Blackhole</div>
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
@@ -86,10 +86,10 @@
                         </div>
                     </div>
                     <div class="video">
-                        <div class="contain-img"><img src="../img/loneliness.png" alt="" class="img-custom"></div>
+                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
                         <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
-                            <div class="detail">loneliness</div>
+                            <div class="detail">The Blackhole</div>
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
@@ -98,10 +98,10 @@
                         </div>
                     </div>
                     <div class="video">
-                        <div class="contain-img"><img src="../img/loneliness.png" alt="" class="img-custom"></div>
+                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
                         <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
-                            <div class="detail">loneliness</div>
+                            <div class="detail">The Blackhole</div>
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
@@ -110,10 +110,10 @@
                         </div>
                     </div>
                     <div class="video">
-                        <div class="contain-img"><img src="../img/loneliness.png" alt="" class="img-custom"></div>
+                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
                         <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
-                            <div class="detail">loneliness</div>
+                            <div class="detail">The Blackhole</div>
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
@@ -122,10 +122,10 @@
                         </div>
                     </div>
                     <div class="video">
-                        <div class="contain-img"><img src="../img/loneliness.png" alt="" class="img-custom"></div>
+                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
                         <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
-                            <div class="detail">loneliness</div>
+                            <div class="detail">The Blackhole</div>
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
@@ -134,10 +134,10 @@
                         </div>
                     </div>
                     <div class="video">
-                        <div class="contain-img"><img src="../img/loneliness.png" alt="" class="img-custom"></div>
+                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
                         <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
-                            <div class="detail">loneliness</div>
+                            <div class="detail">The Blackhole</div>
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
@@ -146,10 +146,10 @@
                         </div>
                     </div>
                     <div class="video">
-                        <div class="contain-img"><img src="../img/loneliness.png" alt="" class="img-custom"></div>
+                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
                         <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
-                            <div class="detail">loneliness</div>
+                            <div class="detail">The Blackhole</div>
                             <div class="channel-name">
                                 Kurzgesagt – In a Nutshell
                             </div>
