--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@
 .videos-container{
     background-color: rgb(32, 32, 32);
     width: 94%;
-    padding-bottom: 25%;
+    padding-bottom: 2.6%;
     float: right;
 }
 .videos{
@@ -127,7 +127,7 @@
     /* padding-bottom: vh; */
     display: inline-block;
     margin-top: 3%;
-    margin-bottom: 1%;
+    /* margin-bottom: %; */
     margin-left: 0.6%;
 }
 .contain-img{
