--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@
 .cat{
     width: 5%;
     border: 1px solid white;
-    border-radius: 50%;
+    border-radius: 15%;
     margin-left: 2%;
     display: inline-block;
     text-align: center;
@@ -123,7 +123,7 @@
 }
 .video{
     width: 24%;
-    background-color: black;
+    background-color: rgb(32, 32, 32);
     /* padding-bottom: vh; */
     display: inline-block;
     margin-top: 3%;
